--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^10.12.3",
     "nodemon": "^3.1.4",
     "sdk": "^0.5.0",
+    "serverless-http": "^3.2.0",
     "stripe": "^16.4.0"
   }
 }
